Fix some layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,24 @@
 @import "base.css";
 @import "syntax-highlighting.css";
 
+/* Lists */
+
+ul {
+  padding-inline-start: 1.25em;
+}
+
+/* Blockquotes */
+
+blockquote {
+  border-left: 1px solid #333;
+  padding: 4px 1.25em;
+  margin-inline-start: 1em;
+}
+
+blockquote cite:before {
+  content: "– "
+}
+
 /* Images */
 
 img {
@@ -78,23 +96,40 @@ footer {
 .inf-content {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
+  width: 90vw;
 }
 
-.inf-submit input[type="submit"] {
-  margin-top: 0 !important;
+.inf-input,
+.inf-submit {
+  flex: 1;
+  min-width: calc(85vw / 2);
 }
 
 .inf-input input[type="email"],
 .inf-submit input[type="submit"] {
+  width: 100%;
+}
+
+.inf-submit input[type="submit"] {
+  margin-top: 0 !important;
+  box-shadow: 3px 3px 0 #000;
   border: 2px solid #000;
+}
+
+.inf-input input[type="email"],
+.inf-submit input[type="submit"] {
   border-radius: 0;
-  /*box-shadow: 3px 3px 0 #000;*/
   padding: 0.4em 0.75em;
   font-family: var(--body-font);
   font-size: 0.875rem;
   background: #fff;
   appearance: none;
+}
+
+.inf-input input[type="email"] {
+  border: unset;
+  border-bottom: 2px solid #000;
 }
 
 .inf-input input[type="email"]:focus {
@@ -105,8 +140,15 @@ footer {
 .inf-submit input[type="submit"] {
   cursor: pointer;
   font-weight: 600;
-  &:submit {
-    box-shadow: 2px 2px 0 #000;
+  color: #000;
+  background: linear-gradient(to right, #000 50%, #fff 50%);
+  background-size: 200% 100%;
+  background-position: right;
+  transition: background-position 0.3s ease, color 0.3s ease;
+
+  &:hover {
+    background-position: left;
+    color: #fff;
   }
 }
 
@@ -284,6 +326,15 @@ article.home > section.home--latest {
     content: "·";
     margin: 0 0.4em;
   }
+
+  highlight pre {
+    padding: 0.5em;
+  }
+
+  .inf-content {
+    gap: 0.5rem;
+  }
+
 }
 
 h1, h2, h3, h4, h5, h6 {
